--- a/debugger/debugger.vcxproj.filters
+++ b/debugger/debugger.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="resources.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="assembler.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bwfuncs.h">
@@ -48,6 +51,12 @@
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="CHLFile.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="assembler.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
   </ItemGroup>
