--- a/debugger/debugger.vcxproj
+++ b/debugger/debugger.vcxproj
@@ -163,12 +163,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="assembler.cpp" />
+    <ClCompile Include="base64.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="resources.cpp" />
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="assembler.h" />
+    <ClInclude Include="base64.h" />
     <ClInclude Include="bwfuncs.h" />
     <ClInclude Include="CHLFile.h" />
     <ClInclude Include="debug.h" />
@@ -178,6 +180,7 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="ScriptLibraryR.h" />
     <ClInclude Include="utils.h" />
+    <ClInclude Include="xdebug.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resource.rc" />
