--- a/debugger/debugger.vcxproj.filters
+++ b/debugger/debugger.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="assembler.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="base64.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bwfuncs.h">
@@ -57,6 +60,12 @@
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="assembler.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="xdebug.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="base64.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
   </ItemGroup>
