--- a/debugger/Resource.rc
+++ b/debugger/Resource.rc
@@ -68,8 +68,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 0,1,1,0
- PRODUCTVERSION 0,1,1,0
+ FILEVERSION 0,2,0,0
+ PRODUCTVERSION 0,2,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -85,13 +85,13 @@ BEGIN
         BLOCK "041004b0"
         BEGIN
             VALUE "CompanyName", "Daniels118"
-            VALUE "FileDescription", "Debugger for Black & White: Creature Isle runtime"
-            VALUE "FileVersion", "0.1.1.0"
+            VALUE "FileDescription", "Black & White: Creature Isle debugger"
+            VALUE "FileVersion", "0.2.0.0"
             VALUE "InternalName", "debugger.dll"
             VALUE "LegalCopyright", "Copyright (C) 2024 Daniels118"
             VALUE "OriginalFilename", "debugger.dll"
-            VALUE "ProductName", "BW Debugger"
-            VALUE "ProductVersion", "0.1.1.0"
+            VALUE "ProductName", "Black & White: Creature Isle debugger"
+            VALUE "ProductVersion", "0.2.0.0"
         END
     END
     BLOCK "VarFileInfo"
